Message from server LiteCable

--- a/apps/web/templates/home/index.html.erb
+++ b/apps/web/templates/home/index.html.erb
@@ -2,18 +2,4 @@
 
 <div class="messages" id='message_list'></div>
 
-<div class="message-form">
-  <form id='message_form'>
-    <div class="row">
-      <input id='message_txt' type="text" required="required">
-    </div>
-
-    <div class="row">
-      <button class="btn" type="submit">
-        <span>Send!</span>
-      </button>
-    </div>
-  </form>
-</div>
-
-<%= javascript 'chat' %>
+<%= javascript 'secret_channel' %>
